--- a/webclient/app/views/hosts/index.html.erb
+++ b/webclient/app/views/hosts/index.html.erb
@@ -4,21 +4,22 @@
       <label for="#services-list">Please choose a service:</label>
       <table id="services-list" class="list">
         <tbody>
-          <% for webservice in @webservices %>
+          <% for host in @hosts %>
           <tr class="service-item">
             <td class="icon"><div class="container"><img src="/icons/yast-service-22.png"></div></td>
-            <td><div class="title"><%= link_to webservice.name, new_session_path(:hostname => webservice.name)  %></div><td>
-            <td><div class="label"><%=h webservice.desc %></div></td>
+            <td><div class="title"><%= link_to host.name, new_session_path(:hostname => host.name)  %></div><td>
+            <td><div class="label"><%=h host.url %></div></td>
+            <td><div class="label"><%=h host.description %></div></td>
             <td class="icon">
               <div class="container">
                 <%= link_to image_tag("/images/edit-icon.gif", :alt =>  "edit"), 
-                    edit_webservice_path(webservice) %>
+                    edit_host_path(host) %>
               </div>
             </td>
             <td class="icon">
               <div class="container">
                 <%= link_to image_tag("/images/delete.png", :alt =>  "delete"), 
-                    webservice, :confirm => _('Are you sure?'), :method => :delete %>
+                    host, :confirm => _('Are you sure?'), :method => :delete %>
               </div>
             </td>
 
@@ -27,13 +28,11 @@
         </tbody>
 
       </table>  
-      <input class="button jqModal" type="submit" value="Add" id="add-webservice" />
+      <input class="button jqModal" type="submit" value="Add" id="add_host" />
       <!--
        FIXME may be add remove and edit buttons and get rid of the icons above
       <input class="button disabled" disabled="true" type="submit" value="Remove" id="remove-printer"/>  
       <input class="button disabled" disabled="true" type="submit" value="Edit" id="edit-printer"/>        
       -->
 </div>
-<!-- webservices list -->
-
-
+<!--host list -->
