--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -25,7 +25,7 @@
 </head>
   <body id="shell" bgcolor="#ffffff" onload="">
     <div id="appliance_logo">
-      <img src="/images/suse-logo.png" alt="" height="120" width="120" border="0" />
+      <img src="/images/suse-logo.png" alt="SUSE" height="120" width="120" border="0" />
 	<div id="appliance_title">My Appliance</div>
 	
         <% host = Host.find(session[:host]) rescue nil
