--- a/plugins/patch_updates/app/views/patch_updates/_patches.html.erb
+++ b/plugins/patch_updates/app/views/patch_updates/_patches.html.erb
@@ -1,46 +1,43 @@
 <table class="patches" <%= @patch_updates.empty? ? "style=\"visibility: hidden;\"" : "" %> >
-      <tr>
-        <th class="first" width=5%><%=_("Check")%></th>
-        <th width=8%><%=_("Kind")%></th>
-	    <th width=15%><%=_("Name")%></th>
-	    <th width="100"><%=_("Summary")%></th>
-        <% if @permissions[:install] %>
-           <th width=15%><%=_("Source")%></th>
-           <th class="last" width=5%><%=_("Install")%></th>
-        <% else %>
-           <th class="last" width=15%><%=_("Source")%></th>
-        <% end %>
-      </tr>
+  <tr>
+    <th class="first" width=5%><%=_("Check")%></th>
+    <th width=8%><%=_("Kind")%></th>
+    <th width=15%><%=_("Name")%></th>
+    <th width="100"><%=_("Summary")%></th>
+    <% if @permissions[:install] %>
+      <th width=15%><%=_("Source")%></th>
+      <th class="last" width=5%><%=_("Install")%></th>
+    <% else %>
+      <th class="last" width=15%><%=_("Source")%></th>
+    <% end %>
+  </tr>
+  <%
+  # this should go to a helper?
+  kinds = { "security" => '/icons/kupdateapplet_red.png',
+    "important" => '/icons/kupdateapplet_yellow.png',
+    "green" => '/icons/kupdateapplet_green.png',
+    "optional" => '/icons/kupdateapplet_optional.png' }
+%>
+  <% @patch_updates.each do |patch_update| %>
+    <tr>
+      <td><input type="checkbox" id=<%= "patch_#{patch_update.resolvable_id}" %> name=<%="patch_#{patch_update.resolvable_id}" %> value=<%=patch_update.resolvable_id%> ></td>
 
-      <% counter=0 %>
-      <% for patch_update in @patch_updates %>
-          <tr id=<%="row_#{counter}"%> >
-            <td><input type="checkbox" id=<%= "#{counter}" %> name=<%="#{patch_update.kind}_#{counter}"%> value=<%=patch_update.resolvable_id%> ></td>
-              <%
-                 # this should go to a helper?
-                 kinds = { "security" => '/icons/kupdateapplet_red.png',
-                           "important" => '/icons/kupdateapplet_yellow.png',
-                           "green" => '/icons/kupdateapplet_green.png',
-                           "optional" => '/icons/kupdateapplet_optional.png' }
-              %>
-              <% if kinds.has_key?(patch_update.kind) %>
-                  <td class="icon" name=<%= patch_update.kind %> <%= image_tag(kinds[patch_update.kind]) %> </td>
-              <% else %>
-                  <td><%=h patch_update.kind %></td>
-              <% end %>
-
-              <td class="label"><%=h patch_update.name %></td>
-              <td class="label"><%=h patch_update.summary %></td>
-              <td><%=h patch_update.repo %></td>
-              <% if @permissions[:install] %>
-                 <td><%= link_to image_tag("/icons/system-software-install.png"\
-                         , :alt =>  "install", :class=>"icon", :border => "0"),\
-                         :controller => 'patch_updates', :id => patch_update.resolvable_id,\
-                         :onclick=>"Element.show('progress')", :method => :post, :action => "install" %></td>
-              <% end %>
-          </tr>
-        <% counter += 1 %>
+      <% if kinds.has_key?(patch_update.kind) %>
+        <td class="icon" > <%= image_tag(kinds[patch_update.kind]) %> </td>
+      <% else %>
+        <td><%=h patch_update.kind %></td>
       <% end %>
-    <tr><td><input type="hidden" id="counter" name="counter" value=<%= "#{counter}" %> ></input></td></tr>
-  </table>
+
+      <td class="label"><%=h patch_update.name %></td>
+      <td class="label"><%=h patch_update.summary %></td>
+      <td><%=h patch_update.repo %></td>
+      <% if @permissions[:install] %>
+        <td><%= link_to image_tag("/icons/system-software-install.png"\
+              , :alt =>  "install", :class=>"icon", :border => "0"),\
+            :controller => 'patch_updates', :id => patch_update.resolvable_id,\
+            :onclick=>"Element.show('progress')", :method => :post, :action => "install" %></td>
+        <% end %>
+    </tr>
+  <% end %>
+</table>
 
