--- a/webclient/app/views/hosts/index.html.erb
+++ b/webclient/app/views/hosts/index.html.erb
@@ -36,7 +36,7 @@
         </tbody>
 
       </table>  
-      <input class="button jqModal" type="submit" value="Add" id="add-host" />
+      <%= link_to _('Add'), new_host_path, :class => "button" %>
       <!--
        FIXME may be add remove and edit buttons and get rid of the icons above
       <input class="button disabled" disabled="true" type="submit" value="Remove" id="remove-printer"/>  
