--- a/webclient/app/views/hosts/new.html.erb
+++ b/webclient/app/views/hosts/new.html.erb
@@ -4,8 +4,8 @@
   <%= f.error_messages %>
 
   <div class="table">
-    <img src="/images/bg-th-left.gif" width="8" height="7" alt="" class="left" />
-    <img src="/images/bg-th-right.gif" width="7" height="7" alt="" class="right" />
+    <img src="/images/bg-th-left.gif" width="8" height="7" class="left" />
+    <img src="/images/bg-th-right.gif" width="7" height="7" class="right" />
     <table class="listing form" cellpadding="0" cellspacing="0">
     <tr>
  	<th class="full" colspan="2"><%=_("WebYaST-Host")%></th>
