fix in attributes; cleanup; adding edit button

--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -27,6 +27,13 @@
     <% end %>
   <% end %>
 <% end %>
+<% if column != 1 %>
+  <br style='clear: both'>
+  <br>
+<% end %>
+<br>
+<br>
+<%= link_to  _("edit limits"),  :action => :edit, :class => "button" %>
 
 
 <script type="text/javascript">
