Cleaned up code and added 2 blank files for js and css

--- a/webclient/public/stylesheets/yast.css
+++ b/webclient/public/stylesheets/yast.css
@@ -1,30 +1,30 @@
 #appliance_logo {
-position: absolute; 
-left:50px; 
-top:10px;
+  position: absolute; 
+  left: 50px; 
+  top: 10px;
 }
 
 #appliance_title {
-font-weight: bold; 
-font-size:3.5em; 
-position: fixed; 
-top: 30px; 
-left: 300px;
+  font-weight: bold;
+  font-size: 3.5em;
+  position: fixed;
+  top: 30px;
+  left: 300px;
 }
 
 #logout_session {
-position:fixed; 
-right:50px; 
-top:10px;
+  position: fixed; 
+  right: 50px; 
+  top: 10px;
 }  
 
 #login_session {
-position:fixed; 
-right:50px; 
-top:10px;
+  position: fixed;
+  right: 50px;
+  top: 10px;
 }  
 
-.content  { 
+.content { 
 margin-left: 15.5em;
 margin-top: 10em;
 }
@@ -34,113 +34,123 @@ margin-top: 10em;
  color: red;
 }
 
-#status_patches_icon  
-{
-margin-left: 2em;
+#status_patches_icon {
+  margin-left: 2em;
 }
 
 #status_patches_msg {
-margin-left: 5em; 
-margin-top: -1.5em;
+  margin-left: 5em; 
+  margin-top: -1.5em;
 }
 
 #status_health_icon  {
-margin-left: 2em;
+  margin-left: 2em;
 }
 
 #status_health_msg {
-margin-left: 5em; margin-top: -1.5em;
+  margin-left: 5em;
+  margin-top: -1.5em;
 }
 
 #configuration_recent {
-margin-left: 2em; margin-top: 5em;
+  margin-left: 2em;
+  margin-top: 5em;
 }
 
 #link_showall {
-position:fixed; 
-right:50px; 
-margin-top: 1em;
+  position:fixed; 
+  right:50px; 
+  margin-top: 1em;
 }
 
 #configuration_network { 
-background-color: #d3d3d3; 
+  background-color: #d3d3d3; 
 }
 
 #module_heading { 
-font-size: 2em; font-weight: bold;
+  font-size: 2em;
+  font-weight: bold;
 }
 
 .module_heading { 
-color: black; font-size: 1.5em; font-weight: bold 
+  color: black;
+  font-size: 1.5em;
+  font-weight: bold 
 }
 
 .module_heading img {
-vertical-align:middle;
+  vertical-align: middle;
 }
 
 #tab_heading {
-	position: relative;
-	width: 100%;
-	height: 3em;
-	width: 45em;
+  position: relative;
+  width: 100%;
+  height: 3em;
+  width: 45em;
 }
 
 #tab_heading ul#tab_nav {
-	margin: 0;
-	padding: 0;
-	position: absolute;
-	bottom: -1px;
-	width: 45em;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  bottom: -1px;
+  width: 45em;
 }
 
 #tab_heading ul#tab_nav li  {
-	display: inline;
-	list-style: none;
+  display: inline;
+  list-style: none;
 }
 
-#tab_heading ul#tab_nav a,#tab_heading ul#tab_nav span,#tab_heading ul#tab_nav a.current {
-	width: 8em;
-	display: block;
-	float: left;
-	padding: 5px 0;
-	margin: 1px 3px 0 0;
-	text-align: center;
-	text-decoration: none;
-	color: #000000;
+#tab_heading ul#tab_nav a,
+#tab_heading ul#tab_nav span,
+#tab_heading ul#tab_nav a.current {
+  width: 8em;
+  display: block;
+  float: left;
+  padding: 5px 0;
+  margin: 1px 3px 0 0;
+  text-align: center;
+  text-decoration: none;
+  color: #000000;
 }
 
-#tab_heading ul#tab_nav span,#tab_heading ul#tab_nav a.current,#tab_heading ul#tab_nav a.current:hover {
-	border: 1px solid #000000;
-	border-bottom: none;
-	padding-bottom: 6px;
-	margin-top: 0;
+#tab_heading ul#tab_nav span,
+#tab_heading ul#tab_nav a.current,
+#tab_heading ul#tab_nav a.current:hover {
+  border: 1px solid #000000;
+  border-bottom: none;
+  padding-bottom: 6px;
+  margin-top: 0;
 }
 
 #tab_heading ul#tab_nav a {
-	background: #d3d3d3;
-	border: 1px solid #000000;
-	border-bottom: none;
+  background: #d3d3d3;
+  border: 1px solid #000000;
+  border-bottom: none;
 }
 
 #tab_heading ul#tab_nav a:hover {
-	margin-top: 0;
-	border-color: #000000;
-	background: #c2c2c2;
-	padding-bottom: 5px;
+  margin-top: 0;
+  border-color: #000000;
+  background: #c2c2c2;
+  padding-bottom: 5px;
 }
 
 th {
-	background: #dddddd;
+  background: #dddddd;
 }
 
 table {
-margin-top: 5px;
+  margin-top: 5px;
 }
 
 a {
-color: #000000;
-text-decoration: none;
+  color: #000000;
+  text-decoration: none;
 }
 
-a:hover
- { color: blue; text-decoration: underline }
+a:hover {
+  color: blue;
+  text-decoration: underline
+}
