Replace link_to with button_to where appropriate
Move 'cancel' button outside of the form for new and edit so it
doesn't start the validation process.

--- a/webclient/app/views/hosts/edit.html.erb
+++ b/webclient/app/views/hosts/edit.html.erb
@@ -36,6 +36,7 @@ $(document).ready(function() {
 	<td class="last"><%= f.text_field :description %></td>
     </tr>
     </table>
-    <p><%= f.submit _("Ok") %><%= link_to _('Cancel'), host_path, :class => "button" %></p>
+    <p><%= f.submit _("Ok") %></p>
   </div>
 <% end %>
+<%= button_to _('Cancel'), host_path, :class => "button" %>
