--- a/webclient/app/views/hosts/new.html.erb
+++ b/webclient/app/views/hosts/new.html.erb
@@ -43,6 +43,7 @@ $(document).ready(function() {
 	<td class="last"><%= f.text_field :description %></td>
     </tr>
     </table>
-  <p><%= f.submit _("Create") %><%= link_to _('Cancel'), hosts_path, :class => "button" %></p>
+  <p><%= f.submit _("Create") %></p>
   </div>
 <% end %>
+<%= button_to _('Cancel'), hosts_path, :class => "button" %>
