Fix errors: uri -> url, class -> :class

--- a/webclient/app/views/hosts/edit.html.erb
+++ b/webclient/app/views/hosts/edit.html.erb
@@ -29,7 +29,7 @@ $(document).ready(function() {
     </tr>
     <tr>
 	<td class="first" width="30"><strong><%=_("Url")%></strong></td>
-	<td class="last"><%= f.text_field :uri, class=> "required" %></td>
+	<td class="last"><%= f.text_field :url, :class => "required" %></td>
     </tr>
     <tr class="bg">
 	<td class="first"><strong><%=_("Description")%></strong></td>
