edit frame for limits definition

--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -33,7 +33,7 @@
 <% end %>
 <br>
 <br>
-<%= link_to  _("edit limits"),  :action => :edit, :class => "button" %>
+<%= button_to  _("edit limits"),  :action => :edit, :class => "button" %>
 
 
 <script type="text/javascript">
