Prevent crash on missing permission

--- a/plugins/systemtime/app/views/system_time/index.rhtml
+++ b/plugins/systemtime/app/views/system_time/index.rhtml
@@ -23,7 +23,9 @@
           <%=_("Region:")%>
         </label>
       </td>
-      <td><%= select_tag "region", options_for_select(@valid, @region.name), :disabled=> disabled %></td>
+      <% name = @region.name rescue ""
+         @valid = Array.new unless @valid -%>
+      <td><%= select_tag "region", options_for_select(@valid, name), :disabled => disabled %></td>
       
     </tr>
     <tr>
