--- a/webclient/public/stylesheets/yast.css
+++ b/webclient/public/stylesheets/yast.css
@@ -1,17 +1,20 @@
+/* 2009-07-15 rlihm: gone
 #appliance_logo {
   position: absolute; 
   left: 50px; 
   top: 10px;
-}
+}*/
 
+/* 2009-07-15 rlihm: gone
 #appliance_title {
   font-weight: bold;
   font-size: 3.5em;
   position: fixed;
   top: 30px;
   left: 300px;
-}
+}*/
 
+/* rewrote this in style.css
 #logout_session {
   position: fixed; 
   right: 50px; 
@@ -22,11 +25,11 @@
   position: fixed;
   right: 50px;
   top: 10px;
-}  
+}*/  
 
 .content { 
-margin-left: 15.5em;
-margin-top: 10em;
+/*margin-left: 15.5em;*/
+/*margin-top: 10em;*/
 }
 
 .notifications {
