--- a/webclient/app/views/controlpanel/index.rhtml
+++ b/webclient/app/views/controlpanel/index.rhtml
@@ -1,11 +1,16 @@
+<%= javascript_include_tag :defaults %>
+
+<% javascript_tag do -%>
+  $(document).ready( function() {
+  <%= remote_function(:update => "status_patches",
+      :url => { :controller => :patch_updates, :action => :show_summary }) %>
+  });
+<% end -%>
 
 <h3><img src="/images/monitoring.png" height="23" width="23" border="0" /> <%= _("Status") %></h3>
 
-<div id="status_patches_icon">
-  <img src= <%=@update_image%> height="32" width="32" border="0" />
-</div>
-<div id="status_patches_msg">
-  <a href="patch_updates"><%=@update_label%></a>
+<div id="status_patches">
+  Loading information about patches
 </div>
 <br />
 <div id="status_health_icon">
@@ -53,3 +58,5 @@
 </div>
 
 </div>
+
+
