add icon to waiting for patches

--- a/webclient/app/views/controlpanel/index.rhtml
+++ b/webclient/app/views/controlpanel/index.rhtml
@@ -10,7 +10,7 @@
 <h3><img src="/images/monitoring.png" height="23" width="23" border="0" /> <%= _("Status") %></h3>
 
 <div id="status_patches">
-  Loading information about patches
+  <img src="/images/working.gif" height="32" width="32" border="0" /> Loading information about patches
 </div>
 <br />
 <div id="status_health_icon">
