--- a/plugins/status/app/views/status/edit.html.erb
+++ b/plugins/status/app/views/status/edit.html.erb
@@ -1,5 +1,4 @@
-<% disabled = ! @permissions[:write] %>
-<% disabled = false %>
+<% disabled = ! @permissions[:writelimits] %>
 
 <h2><%=_("Configure Status Limits")%></h2>
 
